[package]
name = "ch-grafana-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bat = "0.24.0"
clap = { version = "4.5.4", features = ["derive", "env"] }
itertools = "0.13.0"
lazy_static = "1.4.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["rustls-tls", "json", "gzip"], default_features = false }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
