[package]
name = "ch-grafana-cache"
version = "0.1.5"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bat = { version = "0.24.0", features = ["regex-fancy"], default-features = false }
clap = { version = "4.5.4", features = ["derive", "env"] }
colored = "2.1.0"
futures = "0.3.30"
indicatif = "0.17.8"
itertools = "0.13.0"
lazy_static = "1.5.0"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["rustls-tls", "json", "gzip", "stream"], default-features = false }
reqwest-middleware = "0.3.1"
reqwest-retry = "0.5.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
