[package]
name = "ch-grafana-cache"
version = "0.1.12"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Extract Clickhouse SQL queries from a dashboard and execute them"
categories = ["caching", "command-line-utilities", "database"]
repository = "https://github.com/cpg314/ch-grafana-cache"

[[bin]]
name = "ch-grafana-cache"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
anyhow = "1.0.86"
bat = { version = "0.24.0", features = ["regex-fancy"], default-features = false, optional = true }
clap = { version = "4.5.4", features = ["derive", "env"] }
colored = { version = "2.1.0", optional = true }
futures = "0.3.30"
indicatif = "0.17.8"
itertools = "0.13.0"
lazy_static = "1.4.0"
regex = "1.10.4"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "gzip", "stream"], default-features = false }
reqwest-middleware = "0.3"
reqwest-retry = "0.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }


[features]
default = ["cli"]
cli = ["dep:bat", "dep:colored"]
